# bianpaiqi

./: ARCHITECTURE.md  CARDS_CHINESE_UPDATE.md  CHINESE_PROMPTS_UPDATE.md  DETAILED_ARCHITECTURE.md  FINAL_FIX_AGENT_CARD.md  FIX_MCP_MATCHING.md  QUICK_FIX_SUMMARY.md  README.md  pyproject.toml  qwen3-max.md  restart_mcp_only.sh  run_enhanced.sh  run_local.sh  start_real_agents.sh  test_agent_card_structure.py  test_card_normalization.py  test_mcp_find_agent.py
examples/: enhanced_usage.py
output/: 人工智能发展史从萌芽到爆发.docx  写一份关于人工智能发展历史的Word文档_60e6491a.md  好莱坞的发展历程_65e08c31.md  好莱坞的发展历程_7fec110f.md  好莱坞的发展历程_830f9339.md  广州天河区的介绍_454cbaae.md  广州天河区经济数据概览.xlsx  广州市天河区介绍.docx  我想要一个关于广州天河区介绍的Word文档和经济数据的Excel文件_c395dbd0.md  生成2024年中国一线城市GDP对比数据的Excel文件_77e0d3cd.md  黄金价格及影响因素数据.xlsx  黄金历史价格与影响因素.xlsx  黄金历史价格及影响因素.xlsx  黄金的走势_gold_tre.md  黄金走势分析数据.xlsx  黄金走势生成一个excel_94e0bdaf.md  黄金走势的数据excel_b6e5f680.md
real_ecosystem/: integration_test.py
real_ecosystem/agents/: coder.py  data_analyst.py  excel_generator.py  quality_reviewer.py  researcher.py  reviewer.py  translator.py  word_generator.py  writer.py
real_ecosystem/cards/: coder.json  data_analyst.json  excel_generator.json  quality_reviewer.json  researcher.json  reviewer.json  translator.json  word_generator.json  writer.json
real_ecosystem/mcp_server/: server.py
src/yinqing/: main.py  main_enhanced.py
src/yinqing/core/: __init__.py  executor.py  matcher.py  mcp_client.py  parser.py  reviewer.py  snapshot.py  types.py  workflow.py  workflow_enhanced.py
src/yinqing/utils/: common.py  config.py  logger.py
